Fix issue where the front part of wide text slide was hidden (on mobile devices)

--- a/src/Carousel/Carousel.module.css
+++ b/src/Carousel/Carousel.module.css
@@ -22,7 +22,7 @@
   height: 100%;
   width: 100%;
   list-style: none;
-  white-space: nowrap;
+  white-space: normal;
   margin: 0;
   padding: 0;
   display: flex;
